--- a/Frontend/easybank/src/app/components/home/home.component.html
+++ b/Frontend/easybank/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
 
     <div class="container header">
       <nav>
-        <img src="../../../assets/img/logo.svg" alt="" class="logo" />
+        <!-- <img src="../../../assets/img/logo.svg" alt="" class="logo" /> -->
 
         <ul class="nav-ul">
           <li><a href="#">Home</a></li>
