--- a/Frontend/easybank/src/app/components/transfer/transfer.component.html
+++ b/Frontend/easybank/src/app/components/transfer/transfer.component.html
@@ -1,1 +1,94 @@
-<p>transfer works!</p>
+<!-- <p>transfer works!</p> -->
+<div class="dashboard-container">
+
+    <input type="checkbox" id="sidebar-toggle">
+    <!-- <div class="sidebar">
+      <div class="sidebar-header">
+        <h3 class="brand">
+          <span class="ti-unlink"></span>
+          <span>EasyBank</span>
+        </h3>
+        <label for="sidebar-toggle" class="ti-menu-alt"></label>
+      </div>
+    
+      <div class="sidebar-menu">
+        <ul>
+          <li>
+            <a href="">
+              <span class="ti-home"></span>
+              <span>Home</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <span class="ti-credit-card"></span>
+              <span>Payments</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <span class="ti-settings"></span>
+              <span>Settings</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <span class="ti-bar-chart"></span>
+              <span>Stats</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <span></span>
+              <span></span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div> -->
+    
+    <app-sidebar></app-sidebar>
+    
+    <div class="dashboard-content">
+      <header>
+        <div class="search-container">
+          <!-- <span class="ti-search"></span>
+          <input type="search" placeholder="search" /> -->
+        </div>
+    
+        <div class="icons">
+          <span class="ti-palette"></span>
+          <div></div>
+        </div>
+      </header>
+    
+      <main>
+        <h2 class="title">Your Dashboard</h2>
+
+        <mat-tab-group>
+            <mat-tab>
+              <ng-template mat-tab-label>
+                <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+                Secure Payment
+              </ng-template>
+              Content 1
+            </mat-tab>
+          
+            <mat-tab>
+              <ng-template mat-tab-label>
+                <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+                Express Payment
+              </ng-template>
+              Content 2
+            </mat-tab>
+          
+          </mat-tab-group>
+    
+    
+    </main>
+    
+    </div>
+    
+    
+    
+    </div>
