--- a/Frontend/easybank/src/app/components/admin/admin.component.css
+++ b/Frontend/easybank/src/app/components/admin/admin.component.css
@@ -1,3 +1,6 @@
 /* @import url('../login//login.component.css'); */
 @import url('../dashboard/dashboard.component.css');
 
+mat-grid-tile {
+    background: lightblue;
+  }
