--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
@@ -62,7 +62,7 @@
   </header>
 
   <main>
-    <h2 class="title">Your Dashboard</h2>
+    <h2 class="title">Hello, {{user.email}} Your Dashboard</h2>
     <div class="cards-section">
 
         <div class="card">
