--- a/Frontend/easybank/src/app/components/login/login.component.css
+++ b/Frontend/easybank/src/app/components/login/login.component.css
@@ -66,7 +66,7 @@ h2{
     width:328px;
 }
 
-form input[type="text"], 
+/* form input[type="text"], 
 form input[type="email"],
 form input[type="password"] {
     display: block;
@@ -77,7 +77,7 @@ form input[type="password"] {
     padding:1rem;
     margin-bottom:1.4rem;
     font-size: 12px;
-}
+} */
 
 label {
     display: block;
