--- a/Frontend/easybank/src/app/components/settings/settings.component.css
+++ b/Frontend/easybank/src/app/components/settings/settings.component.css
@@ -3,7 +3,7 @@
 
 
 .settings-container{
-    max-width: 550px;
+    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -28,4 +28,13 @@ form{
 
 .input-container{
     margin-bottom: 2rem;
+}
+
+.mat-form-field{
+    width:100%;
+    font-size: 15px;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-infix {
+    padding: 0 0 0 0!important;
 }
