--- a/Frontend/easybank/src/app/components/transfer/transfer.component.html
+++ b/Frontend/easybank/src/app/components/transfer/transfer.component.html
@@ -114,7 +114,7 @@
   
                   <p>Secure Payments will not be processed until the recipient has confirmed the payment</p>
 
-                  <button class="login-button" type="submit">Transfer</button>
+                  <button class="login-button" type="submit">Secure Transfer</button>
               </form>
               </div>
             </mat-tab>
@@ -153,7 +153,7 @@
   
                   <p>Express payments will be automatically proccessed following this process</p>
 
-                  <button class="login-button" type="submit">Transfer</button>
+                  <button class="login-button" type="submit">Express Transfer</button>
               </form>
               </div>
 
