PDF Generation Bug Fixes

--- a/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
@@ -11,25 +11,25 @@
     <div class="sidebar-menu">
       <ul>
         <li>
-          <a href="">
+          <a href="" routerLink="/dashboard">
             <span><i class="fas fa-home"></i></span>
             <span>Home</span>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" routerLink="/dashboard/transfer">
             <span><i class="far fa-credit-card"></i></span>
             <span>Transfer</span>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" routerLink="/dashboard/payments">
             <span class="ti-stats-up"></span>
             <span>Payments</span>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" routerLink="/dashboard/settings">
             <span><i class="fas fa-cog"></i></span>
             <span>Settings</span>
           </a>
