--- a/Frontend/easybank/src/app/components/payments/payments.component.css
+++ b/Frontend/easybank/src/app/components/payments/payments.component.css
@@ -1,1 +1,53 @@
 @import url('../dashboard/dashboard.component.css');
+@import url('../login/login.component.css');
+
+.request-form-container{
+
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:5rem;
+
+}
+
+.request-form-container p{
+    font-size: 1.2rem;
+    padding:1rem;
+    margin-bottom: 1rem;
+}
+
+main h2{
+
+    font-size: 2rem;
+
+}
+
+main h3 {
+    margin-bottom:2rem;
+}
+
+form{
+    margin-bottom: 8rem;
+}
+
+.input-container{
+    margin-bottom: 2rem;
+}
+
+.login-section{
+    margin-bottom: 20px;
+}
+
+.mat-form-field{
+    width:100%;
+    font-size: 15px;
+}
+
+.code-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.mat-form-field.code{
+    width:45%;
+}
